[135]: add functionality for rough glass